--- a/css/contexte.css
+++ b/css/contexte.css
@@ -1,5 +1,130 @@
-section {
+/* -------- AGENCE ------------*/
+.agence {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.agence img {
+  max-width: 400px;
+  object-fit: cover;
+  border: 1px solid var(--light-grey);
+  border-radius: 25px;
+}
+
+.agence a {
+  text-decoration: none;
+  font-weight: 600;
+  color: var(--tertiary-color);
+}
+
+/* -------- OBJECTIFS & ATTENTES ------------*/
+.objectives h2 {
+  margin-bottom: 40px;
+}
+.objectives p {
+  margin-bottom: 20px;
+}
+
+.objectives-grid {
+  display: grid;
+  gap: 40px;
+}
+
+.objectives-grid div {
+  display: flex;
+  flex-direction: column;
+  margin: auto 0px;
+}
+
+.objectives ul {
+  list-style: disc;
+  padding-left: 20px;
+  margin-top: 10px;
+}
+
+li::marker {
+  color: var(--main-color);
+}
+
+/* -------------ENCADRANT----------------*/
+.encadrant-section {
+  background-color: var(--secondary-color);
+}
+
+.encadrant {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 60px 0px;
+  gap: 40px;
+}
+
+.encadrant-name {
+  font-size: var(--big-font-size);
+  margin-bottom: 30px;
+}
+
+.encadrant img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.social-media-list {
+  margin-top: 10px;
+}
+
+/*---------------- CONTEXTE DE STAGE ----------*/
+.list-card-context {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.card-context {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
+
+  width: 220px;
+  background-color: white;
+
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.card-context strong {
+  font-size: 12px;
+  color: var(--main-color);
+}
+
+/*--------------------------------------------*/
+/* --------------- DESKTOP -------------------*/
+
+@media (min-width: 769px) {
+  .agence {
+    flex-direction: row;
+  }
+  .objectives-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+  }
+
+  .first-cell {
+    order: -1;
+  }
+
+  .last-cell {
+    order: 1;
+  }
+
+  .list-card-context {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .agence {
+    flex-direction: row;
+  }
 }
