--- a/css/travaux.css
+++ b/css/travaux.css
@@ -1,9 +1,16 @@
-/* accordéon */
+.dataconsult p,
+.decouvrir p {
+  max-width: 500px;
+  text-align: center;
+}
+
+/* ----------------- PROJETS ------------------- */
+
 .accordion {
   border: 1px solid #eee;
   border-radius: 14px;
   overflow: hidden;
-  margin-bottom: 12px;
+  margin: 10px 20px;
 }
 
 .accordion-title {
@@ -19,10 +26,70 @@
   background: none;
   cursor: pointer;
   font-weight: 600;
+  min-width: 100px;
 }
 
 .accordion-content {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.accordion ul {
+  list-style: disc;
+  padding-left: 30px;
+  margin-top: 10px;
+}
+
+.list-project-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-data {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
+
+  font-size: var(--medium-font-size);
+  text-transform: uppercase;
+}
+
+.project-data strong {
+  font-size: 12px;
+  color: var(--main-color);
+}
+
+.project-context {
+  text-transform: none;
+  margin-bottom: 20px;
+}
+
+.project-info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.project-img img {
+  width: 100%;
+  object-fit: contain;
+  border-radius: 25px;
+  border: 1px solid var(--light-grey);
+}
+
+/*--------------------------------------------*/
+/* --------------- DESKTOP -------------------*/
+
+@media (min-width: 769px) {
+  .accordion-content {
+    flex-direction: row;
+  }
+  .project-img {
+    max-width: 400px;
+  }
 }
