--- a/css/bilan.css
+++ b/css/bilan.css
@@ -4,6 +4,11 @@
   gap: 40px;
 }
 
+.pro-cons p,
+.pro-cons h2 {
+  text-align: center;
+}
+
 .pro-cons ul {
   list-style: disc;
   padding-left: 30px;
@@ -13,14 +18,24 @@
   display: grid;
   grid-template-columns: 1fr;
   text-align: center;
+  justify-items: center;
+  justify-content: flex-start;
+  margin: auto;
   gap: 40px;
 
-  background-color: var(--secondary-color);
   padding: 40px 0px 80px 0px;
+  max-width: var(--max-width-content);
+}
+
+.skills-block {
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .skills strong {
-  padding-bottom: 40px;
+  font-weight: 700;
 }
 
 .list-skills {
@@ -37,14 +52,28 @@
   background-color: white;
 }
 
+.before-after {
+  background-color: white;
+  min-width: 400px;
+}
+
 .before-after li {
   display: flex;
-  gap: 5px;
+  justify-content: space-between;
 }
 
 .before-after img {
   min-width: 15px;
   object-fit: contain;
+}
+
+.impact-text {
+  max-width: 600px;
+}
+
+.thanks {
+  font-size: var(--big-font-size);
+  padding-top: 80px;
 }
 
 /*--------------------------------------------*/
@@ -53,6 +82,11 @@
 @media (min-width: 769px) {
   .pro-cons {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .pro-cons p,
+  .pro-cons h2 {
+    text-align: left;
   }
 
   .skills {
