--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ footer {
 
 /* Header */
 header {
-  position: sticky;
+  position: relative;
   top: 0px;
   border-bottom: 1px solid var(--light-grey);
   display: flex;
@@ -58,6 +58,32 @@ nav a {
   font-weight: 600;
 }
 
+#burger-toggle {
+  display: none;
+}
+
+#burger-toggle {
+  display: none;
+}
+
+.burger {
+  display: block;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+nav.main-nav {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+#burger-toggle:checked + .burger + nav.main-nav {
+  display: flex;
+}
+
 /* Footer */
 footer {
   border-top: 1px solid var(--light-grey);
@@ -68,6 +94,12 @@ footer {
 }
 
 /* ------------------ GLOBAL STYLES ----------------------*/
+h1 {
+  line-height: 50px;
+
+  color: white;
+  text-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
 h2 {
   color: var(--main-color);
   font-size: var(--big-font-size);
@@ -205,6 +237,17 @@ section div {
 /*--------------------------------------------*/
 /* --------------- DESKTOP -------------------*/
 @media (min-width: 769px) {
+  .burger {
+    display: none;
+  }
+
+  nav.main-nav {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    margin-top: 0;
+  }
+
   footer {
     flex-direction: row;
   }
